--- a/README
+++ b/README
@@ -39,7 +39,7 @@ ADV. USAGE:
   
   
  
-*solardatov:*
+solardatov:
 
 I added test_custom_lib_paths section to the XML config file to include custom LD_LIBRARY_PATH's in run_test.sh
 
